--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "chai": "~1.4.2",
     "mocha": "1.3.x",
+    "nock": "0.27.x",
     "igelkott": "*"
   },
   "scripts": {
